--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -27,6 +27,10 @@ body{
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
 }
+
+a.externo::after{
+    content: '\00A0\1F517';
+}
 header{
     background-image: linear-gradient(to bottom, var(--cor2), var(--cor5));
     min-height: 150px;
@@ -37,6 +41,7 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
@@ -48,6 +53,7 @@ header > p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
 }
 nav{
@@ -56,7 +62,7 @@ nav{
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.363)
 }
 nav > a{
-    color: white;
+    color:  var(--cor1);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -81,9 +87,16 @@ main{
 main h1 {
     color: var(--cor5);
     font-family: var(--fonte-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 main h2{
     font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    font-weight: normal;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
 }
 main p{
     margin: 15px 0px;
@@ -96,8 +109,18 @@ main p{
 main strong{
     color: var(--cor4);
     font-weight: bold;
+}
+main a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
     background-color: var(--cor1);
     padding: 2px 6px;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor4);
 }
 
 main img{
@@ -108,7 +131,57 @@ main img.pequena{
     display: block;
     margin: auto;
 }
+
+div.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.281);
+}
+
+aside > h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > ul{
+    list-style-type: '\2705\00A0\00A0';
+list-style-position: inside;
+columns: 2;
+}
+
 footer{
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+footer a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;    
+}
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor1);
 }
